# back-end

./: .gitignore  README.md  pyproject.toml
.github/workflows/: django.yml
back_end/: db.sqlite3  pytest.ini
back_end/assign_paper_reviewers/: apps.py  models.py  urls.py  views.py
back_end/assign_paper_reviewers/migrations/: 0001_initial.py
back_end/back_end/: settings.py  urls.py
back_end/comments/: apps.py  models.py  tests.py  urls.py  views.py
back_end/comments/migrations/: 0001_initial.py  0002_alter_comment_id.py
back_end/conference/: helpers.py  models.py  tests.py  urls.py  views.py
back_end/conference/migrations/: 0001_initial.py  0002_rename_created_by_conference_admin_id.py  0003_conference_papers_deadline.py  0004_conference_automatic_assign_status.py  0005_conference_status.py
back_end/conference_roles/: apps.py  models.py  tests.py  urls.py  views.py
back_end/conference_roles/migrations/: 0001_initial.py
back_end/notifications/: helpers.py  models.py  tests.py  urls.py  views.py
back_end/notifications/migrations/: 0001_initial.py  0002_rename_creation_date_notification_created_at_and_more.py
back_end/papers/: apps.py  models.py  tests.py  urls.py  views.py
back_end/papers/migrations/: 0001_initial.py
back_end/preferences/: apps.py  models.py  tests.py  urls.py  views.py
back_end/preferences/migrations/: 0001_initial.py  0002_alter_preference_preference.py
back_end/reviews/: models.py  tests.py  urls.py  views.py
back_end/sip_back_end/: manage.py
back_end/users/: decorators.py  models.py  tests.py  urls.py  views.py
(+11 files in other folders)
