[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["ryuk4real <84407165+ryuk4real@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
Django = "^5.1.2"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
